2023/05/12: Rebar3 is now used for autopatch instead of
            Rebar2. `make distclean` or `rm -rf .erlang.mk`
            might be required after updating Erlang.mk.
            Moving to Rebar3 increases compatibility now
            that few maintained projects are using Rebar2.
            For compatibility reasons the variables to
            point to a different rebar are now REBAR3_GIT
            and REBAR3_COMMIT.

2023/05/12: A number of broken packages have been removed.
            They were all unmaintained and there's a low
            chance that this will break anyone's project.

2023/05/15: Protobuff compilation with `gpb` now uses the
            `{use_packages, true}` option.

2023/05/15: Experimental support for caching git and
            hex dependencies has been added. Set
            `CACHE_DEPS=1` to enable.

2023/05/16: Remove support for HiPE and ErlLLVM.

2024/10/01: Initial beam-cache implementation. This is used
            to cache beam files when switching from/to test
            builds.

2024/11/14: Most packages in the Erlang.mk package index
            have been removed. To ensure that existing
            projects continue working, please add the
            relevant dep_* lines to your projects. If
            you were using dep_*_commit lines make sure
            to update them as well. Note that projects
            that have corresponding Erlang.mk functionality,
            as well as Cowboy, Ranch, Gun and Cowlib remain
            in the index.